package targets;

public interface interface1 {

}
