@startuml

interface interface1 {
  targets
  --
}

class class3 {
  targets
  --
  + class3(): 
}

class class1 {
  targets
  --
  + x: int
  + y: int
  --
  + class1(): 
  + main(String[]): void
  + foo(): int
}

class class2 {
  targets
  --
  + class2(): 
}

' Relationships
class3 --|> class2
class1 ..|> interface1
class2 --|> class1

@enduml
